selectivizr - change log
========================

Current Build
-------------

 * BUG - resolveUrl() fails to resolve protocol relative urls
 * NEW - expose selectiviz'd cssText through styleSheet object via 'rawCssText' expando property
 * BUG - incorrect parsing of @media blocks (fixes respondJS compatibility issue)
 * BUG - resolveUrl() incorrectly fails external assets urls for violating the same origin policy
 * CHG - selectivizr MUST now be included AFTER all <link>'d stylesheets!
 * BUG - IE fails to render page (WSOD (White Screen of Death)) under certain conditions
 * BUG - @font-face can cause IE to hang when processing CSS files after DOM load
 * BUG - split DOM and CSS parsing into two stages. CSS parsing in now instant
 * NEW - selectivizr now honours media specific @imports in style sheets
 * BUG - comments placed between @import rules caused the import to fail


v1.0.2
------

 * BUG - fixed Google Closure Compiler issue that added 2 global vars - sorry about that!
 * NEW - removed the eval() from determineSelectorMethod()
 * BUG - selectivizr incorrectly detects Yahoo! profiler as YUI selector library
 * NEW - selectivizr can now be "lazy-loaded"
 * NEW - switched DOMReady back to Diego Perini's (new) ContentLoaded.
 * BUG - asset urls using the 'data:' scheme (i.e. background-image) resolved to a path (Chris Korhonen)
 * BUG - resolveUrl() failed if the context url contained a hash followed by a '/' (Zee Agency)
 * BUG - IE version detection wasn't IE>9 friendly (reported by Paul Irish)



v1.0.1
------

 * BUG - @import urls not wrapped with "url()" are now correctly processed 
 * BUG - relative urls are now correctly resolved
 * BUG - patched [*=""] selector in IE8 (returns elements it shouldn't)



v1.0.0
------

ie-css3.js is now stable enough to be released with out a beta suffix - say hello to selectivizr v1!
 


v0.9.7b
-------

 * NEW - Complete rewrite of the stylesheet parser.
 * NEW - :not() pseudo support.