@@ -137,6 +137,10 @@
 				<td>background: url("http://domain/test.png")</td>
 				<td>Testing css property referring to an asset on an external domain</td>
 			</tr>
+			<tr id="url-htc">
+				<td>background: url("js/test.htc")</td>
+				<td>Testing behavior url resolves relative to the document url</td>
+			</tr>
 		</table>
 
 		<h3>iframe tests</h3>
