@@ -4,7 +4,8 @@ selectivizr - change log
 Current Build
 -------------
 
- * BUG - resolveUrl() fails to resolve protocol relative urls
+ * BUG - behaviors (.htc files) are now ignored when processing urls. Fixes "CSS3PIE" issue
+ * BUG - resolveUrl() fails to resolve protocol relative urls. Fixes "AddThis" issue
  * NEW - expose selectiviz'd cssText through styleSheet object via 'rawCssText' expando property
  * BUG - incorrect parsing of @media blocks (fixes respondJS compatibility issue)
  * BUG - resolveUrl() incorrectly fails external assets urls for violating the same origin policy
